<resources>
    <string name="app_name">HW1_NumberGuessingGame</string>
    <string name="number_guessing_game">Number Guessing Game</string>
    <string name="guess_a_number_between_1_and_100">Guess a number between 1 and 100</string>
    <string name="number_of_tries_0">Number of Tries: 0</string>
    <string name="enter_a_number">Enter a number</string>
    <string name="play_again">Play Again</string>
    <string name="guess">Guess</string>
    <string name="theguessinggame">theguessinggame</string>
</resources>